# CI-CD-for-GTest

./: .gitignore  Log_parser_html.py  README.md
.github/workflows/: ci.yml
P1/: CMakeLists.txt
P1/include/: my_module.h
P1/src/: my_module.c
P1/tests/: test_my_module.cpp
